# 58_MinionClassifier

./: README.md  classes.txt  main.py  pyproject.toml  test.py  utils.py
scripts/: webscraper.py
